--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -49,6 +49,10 @@ jobs:
         env:
           DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb  # Configure the DATABASE_URL environment variable for tests
         run: pytest
+      - name: Run tests with Pytest cov
+        env:
+          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb  # Configure the DATABASE_URL environment variable for tests
+        run: pytest --cov  
 
   build-and-push-docker:
     needs: test
