--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,5 +1,3 @@
-name: CI/CD Pipeline
-
 on:
   push:
     branches:
@@ -13,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.12] # Define Python versions here
+        python-version: [3.10.12]
     services:
       postgres:
         image: postgres:latest
@@ -44,25 +42,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-      - name: Run tests with Pytest
-      - name: Run tests with Pytest
-      env:
-        DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb
-        SMTP_HOST: smtp.gmail.com # SMTP server (example: Gmail)
-        SMTP_PORT: 587 # Typically 587 for TLS, or 465 for SSL
-        SMTP_USER: ${{ secrets.SMTP_USER }} # Secret SMTP user (email)
-        SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }} # Secret SMTP password (app password)
-        SMTP_FROM_EMAIL: ${{ secrets.SMTP_USER }} # Sender email
-        SMTP_TO_EMAIL: "recipient@example.com" # Receiver email
-      run: |
-        pytest
-        
-      - name: Run tests with Pytest cov
+      - name: Set SMTP Environment Variables
+        run: echo "Configuring SMTP settings..."
         env:
-          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb  # Configure the DATABASE_URL environment variable for tests
-        run: pytest --cov  
-
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}    
+      - name: Run tests with Pytest
+        env:
+          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb
+        run: pytest
+      
+      - name: Run tests with Pytest coverage
+        env:
+          DATABASE_URL: postgresql+asyncpg://user:password@localhost:5432/myappdb
+        run: pytest --cov
+  
   build-and-push-docker:
     needs: test
     runs-on: ubuntu-latest
@@ -83,8 +79,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: nishi2110/hw-10_eventmanager:${{ github.sha }} # Uses the Git SHA for tagging
-          platforms: linux/amd64,linux/arm64 # Multi-platform support
+          tags: nishi2110/hw-10_eventmanager:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=nishi2110/hw-10_eventmanager:cache
           cache-to: type=inline,mode=max
           
@@ -93,6 +89,8 @@ jobs:
         with:
           image-ref: 'nishi2110/hw-10_eventmanager:${{ github.sha }}'
           format: 'table'
-          exit-code: '1' # Fail the job if vulnerabilities are found
+          exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
+      
+      
